[package]
name = "anodyne"
version = "0.1.0"
description = "An opinionated set of tools for building applications (mostly with `axum`)"
authors = ["j-n-f <154852324+j-n-f@users.noreply.github.com>"]
keywords = ["web"]
license = "MIT"
homepage = "https://github.com/j-n-f/anodyne"
repository = "https://github.com/j-n-f/anodyne"
edition = "2021"

[dependencies]
anodyne_derive = { version = "0.1.0" }
regex = { version = "1.11.0" }